2005-11-22  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: remove fpic and rdynamic magic - let CMake
	handle it

2005-11-21  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Removed some remnants of the old build system, i.e.
	requirements, DO_MINOR_LIBS, SHARED_LIBRARY_EXT, SHOULD_USE_FPIC and
	SHOULD_USE_RDYNAMIC. Furthermore, some Irix stuff which has been
	commented out for some time now has been nuked.

	* .cvsignore, Makefile.am, admin/.cvsignore, configure.ac,
	include/Makefile.am, src/.cvsignore, src/Makefile.am, src/al_cpu_caps.h:
	More steps towards automake support. Things build and install at least
	on Linux now when all backends are enabled (without MMX).

	* admin/Makefile.am, include/AL/.cvsignore, include/AL/Makefile.am:
	Added.

	* .cvsignore, autogen.sh, src/.cvsignore: Synched with recent
	changes regarding the move to automake.

	* COPYING, Makefile.am, NEWS, README, include/.cvsignore,
	include/Makefile.am, src/Makefile.am: Added.

	* INSTALL, Makefile.in, config.guess, config.sub, install-sh,
	src/Makefile.in: Removed.

	* configure.ac: Define NDEBUG unless debugging is enabled.

	* src/mixaudio16.c: Fixed a "comparison between signed and
	unsigned" warning in an assertion.

	* .cvsignore, CMakeLists.txt, Makefile.in, configure.ac: Updated to
	follow toplevel directory cleanup.

	* admin/.cvsignore, admin/.indent.pro, admin/openal-config.in,
	admin/openal.pc.in: Added.

	* .indent.pro, openal-config.in, openal.pc.in: Removed.

2005-11-21  Prakash Punnoor <prakash@punnoor.de>

	* src/mixaudio16.c: fix NDEBUG related stuff

	* CMakeLists.txt: add debug stuff; make options names shorter;
	added test-suite

	* INSTALL.cmake: update status; more ccmake info;
	merged to INSTALL; removed

	* INSTALL: merged INSTALL.cmake

	* CMakeModules/CMakeASMCompiler.cmake.in,
	CMakeModules/CMakeASMInformation.cmake,
	CMakeModules/CMakeDetermineASMCompiler.cmake: moved

	* admin/CMakeModules/CMakeASMCompiler.cmake.in,